--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_modular: ^5.0.3
   google_fonts: ^5.1.0
+  web3dart: ^2.6.1
+  provider: ^6.0.5
+  http: ^1.1.0
+  web_socket_channel: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/
+      - build/contracts/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
